alignment fix for 1140px- 840px screen size

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -273,10 +273,13 @@ a.nav-text:hover {
 }
 
 @media screen and (max-width: 1140px)  {
-	.nav-mode-icon {
-		padding-top: 10px;
-	}
 	.project-name {
 		padding-top: 10px;
 	}
+}
+
+@media screen and (max-width: 839px) {
+    .nav-mode-icon {
+        padding-top: 10px;
+    }
 }
